--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,6 +13,7 @@
     <string name="login_label">Логин</string>
     <string name="name_hint">Не более 30 знаков</string>
     <string name="no_account_text">Ещё нет аккаунта?</string>
+    <string name="not_empty_form_text">Все поля должны быть заполнены</string>
     <string name="password_box_hint">Ваш пароль</string>
     <string name="password_label">Пароль</string>
     <string name="password_hint">Не менее 10 знаков, включая буквы в обоих регистрах, цифры и спецсимволы</string>
