--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="login_label">Login</string>
     <string name="name_hint">No more than 30 chars</string>
     <string name="no_account_text">Don\'t have an account yet?</string>
+    <string name="not_empty_form_text">All fields must be filled</string>
     <string name="password_box_hint">Your password</string>
     <string name="password_hint">At least 10 chars incl. upper and lowercase letters, numbers and special symbols</string>
     <string name="password_label">Password</string>
