feat: extract successful login to string resources, apply make substring bold function

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,6 +11,7 @@
     <string name="login_header_text">Аутентификация</string>
     <string name="login_hint">От 3 до 20 знаков</string>
     <string name="login_label">Логин</string>
+    <string name="login_success_text">Вход выполнен успешно.\n Добро пожаловать, %1$s!</string>
     <string name="name_hint">Не более 30 знаков</string>
     <string name="no_account_text">Ещё нет аккаунта?</string>
     <string name="not_empty_form_text">Все поля должны быть заполнены</string>
